--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
         </div>
         <div id="introduction">
-            <h3>We and willing to help</h3>
+            <h3>We are willing to help</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sagittis felis vel interdum venenatis. Praesent sit amet pretium mi. Vestibulum nisl metus, pulvinar a lacinia ut, pharetra eget sapien. Mauris pretium, augue eget tristique aliquam, lorem justo semper ligula, vel pulvinar mauris nulla eget quam. Sed vitae egestas ante. Quisque facilisis auctor lectus, eu dignissim arcu tincidunt vitae. Integer dapibus dui vitae arcu elementum, quis volutpat augue dapibus. Quisque vestibulum nulla vel purus interdum, id tincidunt neque congue.</p>
         </div>
         <div id="leftsidebar" class="sidebar"> 
